# otus_rust_hw

./: Cargo.toml  README.md  docker-compose.yml
examples/: mk_house_with_manual_setup.rs
exchange_model/: Cargo.toml
exchange_model/src/: error.rs  lib.rs
exchange_protocol/: Cargo.toml
exchange_protocol/src/: codecs.rs  domain.rs  lib.rs
gui/: Cargo.toml
gui/examples/: gui_interactions.rs
gui/src/: error.rs
house/: Cargo.toml
house/examples/: mk_house_with_manual_setup.rs  mk_predefined_house.rs
house/src/: lib.rs
house/src/devices/: device_info.rs  mod.rs  power_socket.rs  temperature_sensor.rs
house/src/errors/: app_error.rs  intelligent_house_error.rs  mod.rs
house/src/house/: domain.rs  house_storage.rs  intelligent_house.rs  memory_intelligent_house.rs  mod.rs
house/src/inventory/: device_inventory.rs  domain.rs  memory_device_inventory.rs  mod.rs
house/src/synchronizer/: device_synchronizer.rs  mod.rs
house/tests/: integration_tests.rs
house_library/: Cargo.toml
house_library/examples/: lib_interactions.rs
house_library/examples/inv/: bindings.rs  mod.rs
house_library/src/: lib.rs
house_server/: Cargo.toml
house_server/examples/: house_interactions.rs  start_house_client.rs
house_server/src/: domain.rs  error.rs  house_client.rs  house_server.rs  lib.rs
src/errors/: mod.rs
src/synchronizer/: device_synchronizer.rs
tcp/: Cargo.toml
tcp/examples/: start_client.rs  start_server.rs  tcp_interaction.rs
tcp/src/: domain.rs  error.rs  lib.rs  tcp_client.rs  tcp_protocol.rs  tcp_server.rs
tcp_exchange/: Cargo.toml
tcp_exchange/examples/: start_client.rs  start_server.rs  start_tcp_client.rs  start_tcp_server.rs  tcp_interaction.rs
tcp_exchange/src/: domain.rs  error.rs  lib.rs  tcp_client.rs  tcp_protocol.rs  tcp_server.rs
udp_exchange/: Cargo.toml
udp_exchange/examples/: start_client.rs  start_server.rs  start_udp_client.rs  start_udp_server.rs
udp_exchange/src/: lib.rs  udp_client.rs  udp_server.rs
web/: Cargo.toml
web/examples/: api_interactions.rs
web/src/: domain.rs  error.rs  house_api.rs  lib.rs
web/src/actions/: mod.rs  service.rs
web/src/db/: db_device_inventory.rs  db_intelligent_house.rs  mod.rs
