[package]
name = "homework"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
futures = "0.3.24"
exchange_protocol = { path = "../exchange_protocol" }
house_server = { path = "../house_server" }
tcp_exchange = { path = "../tcp_exchange" }
udp_exchange = { path = "../udp_exchange" }
house = { path = "../house" }