[package]
name = "house"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frunk = "0.4.0"
frunk_core = { version = "0.4.0", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
derive_more = "0.99.0"
parking_lot = "0.12.1"