[package]
name = "house_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
flexbuffers = "2.0.0"
serde = "1.0.140"
serde_derive = "1.0.141"
frunk = "0.4.0"
frunk_core = { version = "0.4.0", features = ["serde"] }
derive_more = "0.99.0"
parking_lot = "0.12.1"
threadpool = "1.0"
dashmap = "5.3.4"
tcp_exchange = { path = "../tcp_exchange" }
udp_exchange = { path = "../udp_exchange" }
exchange_protocol = { path = "../exchange_protocol" }
house = { path = "../house" }