[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exchange_protocol = { path = "../exchange_protocol" }
house = { path = "../house" }

actix-web = "4.2.1"
mongodb = "2.3.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
frunk = "0.4.0"
frunk_core = { version = "0.4.0", features = ["serde"] }
derive_more = "0.99.0"
parking_lot = "0.12.1"
dashmap = "5.3.4"
tokio = { version = "1.20.1", features = ["full"] }
async-trait = "0.1.57"
futures = "0.3.24"
reqwest = { version = "0.11", features = ["blocking", "json"] }
